refactor(regions)!: rename RegionIntersection to RegionUnion
Rename to match existing union behavior, update selection errors, and accept intentional API break.

BREAKING CHANGE: RegionIntersection has been removed. Use RegionUnion instead.
Refs: #2982